[project]
name = "pocket-poker-pal-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "assemblyai>=0.50.0",
    "black>=26.1.0",
    "fastapi>=0.128.4",
    "isort>=7.0.0",
    "langchain>=1.2.9",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.17",
    "langchainhub>=0.1.21",
    "langgraph>=1.0.8",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "slowapi>=0.1.9",
    "uvicorn>=0.40.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src"]
